<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/publicProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_public_profile"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_profile_firstname"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_profile_lastname"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/privateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_private_profile"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/emailProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_profile_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/phoneProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_profile_phone"
        android:inputType="phone" />
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingTop="20dp"
    >
    <Button
        android:id="@+id/submitProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_btn_submit" />
	</LinearLayout>
</LinearLayout>