<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/widget1label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/widgetPending"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/widget2label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/widgetPost"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttontxt" />

</LinearLayout>