<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f000" >

    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_x="0dp"
        android:layout_y="50dp"
        android:text="@string/txt_email"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/txt_email_reset"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_x="80dp"
        android:layout_y="40dp"
        android:ems="10"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:hint="@string/hint_email"
        android:inputType="text" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="100dp"
        android:text="@string/txt_send" />

</AbsoluteLayout>